--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,7 @@
     <!-- Error text message to display when the device has no access to the internet while
     performing the search [CHAR LIMIT=NONE]-->
     <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="uncheck">Uncheck</string>
+    <string name="search_a_book">Search a book...</string>
 
 </resources>
